--- a/src/app/components/instagram-feed/instagram-feed.component.scss
+++ b/src/app/components/instagram-feed/instagram-feed.component.scss
@@ -8,13 +8,13 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 64px;
+  gap: 40px;
 }
 
 .ig-text {
   display: flex;
   flex-direction: column;
-  gap: 14px;
+  gap: 10px;
   max-width: 380px;
 
   h3 {
